fix baseURL and paths in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,12 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    /* config url and base url */
+    "baseUrl": "src",
+    "paths": {
+      "@components/*": ["components/*"]
+    },
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
