--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,13 +14,22 @@
     "plugin:prettier/recommended",
     "prettier"
   ],
-  "parser": "@typescript-eslint/parser",
+  // "parser": "@typescript-eslint/parser",
+  // "parserOptions": {
+  //   "ecmaVersion": "latest",
+  //   "sourceType": "module",
+  //   "project": true,
+  //   "strict": true,
+  //   "allowJs": true,
+  //   "jsx": "react-jsx",
+  //   "tsconfigRootDir": "__dirname"
+  // },
   "plugins": [
     "react",
     "react-hooks",
     "jsx-a11y",
-    "prettier",
-    "react-refresh"
+    "prettier"
+    // "react-refresh"
   ],
   "rules": {
     "prettier/prettier": [
