install the pckages

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,9 @@
 {
-  "arrowParens": "always",
-  "useTabs": true,
+  "useTabs": false,
   "bracketSpacing": true,
-  "endOfLine": "lf",
   "printWidth": 120,
-  "quoteProps": "as-needed",
   "tabWidth": 2,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "jsxSingleQuote": true,
   "organizeImportsSkipDestructiveCodeActions": true, 
   "semi": true,
