--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,10 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
-  "extends": [
+	"env": {
+		"browser": true,
+		"es2021": true,
+		"node": true
+	},
+	"extends": [
 		"eslint:recommended",
 		"plugin:react/recommended",
 		"plugin:react-hooks/recommended",
@@ -13,36 +13,37 @@
 		"plugin:@typescript-eslint/recommended",
 		"eslint-config-prettier"
 	],
-  // "parserOptions": {
-  //   "ecmaFeatures": {
-  //     "jsx": true
-  //   },
-  //   "ecmaVersion": 2021,
-  //   "sourceType": "module"
-  // },
-  "plugins": ["react", "react-hooks", "prettier"],
-  "rules": {
-		"prettier/prettier": [
-			"warn",
-			// override the .prettierrc file
-			{
-				"singleQuote": true
-			}
-		],
-		"react/prop-types": "off",
-		"import/no-unresolved": "off",
-		"no-unused-vars": [
-			"warn",
-			{
-				"vars": "all"
-			}
-		],
-		// "quotes": ["error", "double"],  ---> to force use double quote
-		"no-console": "off"
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": 2021,
+		"sourceType": "module"
 	},
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  }
+	"plugins": ["react", "react-hooks", "prettier"],
+	"rules": {
+    "prettier/prettier": [
+      "off",
+      // override the .prettierrc file
+      {
+        "singleQuote": true
+      }
+    ],
+    "no-unused-vars": [
+      "off",
+      {
+        "vars": "all"
+      }
+    ],
+    "react/prop-types": "off",
+    "import/no-unresolved": "off",
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "no-console": "off"
+  },
+	"settings": {
+		"react": {
+			"version": "detect"
+		}
+	}
 }
