--- a/.eslintrc
+++ b/.eslintrc
@@ -38,6 +38,8 @@
     "react/prop-types": "off",
     "import/no-unresolved": "off",
     "react/react-in-jsx-scope": "off",
+    "no-var-requires": "off",
+		"@typescript-eslint/no-inferrable-types": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "no-console": "off"
   },
