add reqct query and set some functions

--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,7 @@
 		"react/react-in-jsx-scope": "off",
 		"no-var-requires": "off",
 		"react/display-name": "off",
+		"@typescript-eslint/no-explicit-any": "off",
 		"@typescript-eslint/no-empty-interface": "off",
 		"@typescript-eslint/no-inferrable-types": "off",
 		"@typescript-eslint/no-non-null-assertion": "off",
