add types folder and config it

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "paths": {
       "components/*": ["src/components/*"],
       "utils/*": ["src/utils/*"],
-      "assets/*": ["src/assets/*"]
+      "assets/*": ["src/assets/*"],
+      "types/*": ["src/types/*"],
     },
     /* Bundler mode */
     "moduleResolution": "node",
