--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-*.local
+# *.local
 
 # Editor directories and files
 .vscode/*
@@ -24,4 +24,4 @@ dist-ssr
 *.sln
 *.sw?
 
-.env.dev
+# .env.dev
