--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "checkJs": false,
     "noEmit": true,
     "jsx": "react-jsx",
     "importHelpers": true,
