--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2020",
     "allowSyntheticDefaultImports": true,
     "useDefineForClassFields": true,
+    "noUnusedLocals": false,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
@@ -26,10 +27,9 @@
     "importHelpers": true,
 
     /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "strict": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": false
   },
   "exclude": [
     "node_modules"
